--- a/reactnative/package.json
+++ b/reactnative/package.json
@@ -13,7 +13,10 @@
     "@react-native-community/async-storage": "^1.12.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-shadow": "^1.2.2",
+    "react-native-shadow-view": "0.0.1",
     "styled-components": "^5.2.3",
+    "typescript": "^4.2.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
