--- a/reactnative/package.json
+++ b/reactnative/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@unimodules/react-native-adapter": "^6.2.2",
+    "babel-plugin-inline-import": "^3.0.0",
+    "expo-cli": "^4.5.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
@@ -22,6 +26,16 @@
     "react-native-screens": "^3.3.0",
     "react-native-shadow": "^1.2.2",
     "react-native-shadow-view": "0.0.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-svg-uri": "^1.2.3",
+    "react-native-unimodules": {
+      "android": {
+        "modulesPaths": [
+          "./path/to/node_modules"
+        ]
+      }
+    },
     "styled-components": "^5.2.3",
     "typescript": "^4.2.4",
     "uuid": "^8.3.2"
